tests/fixtures/semantic/invalid/invalid-type.ck
module app.bad

model User {
  id: NotAType
}
